    + [NT] Count experimental tags as a separate group of tags.  This
      fixes an issue where lintian would exit 1 if the only error
      tags emitted were experimental.  (Closes: #658971)
  * lib/Util.pm:
    + [NT] Create clean_env function to handle cleaning of the
      environment for children processes and finding a suitable UTF-8
      locale (when needed).

  * man/lintian.pod.in:
    + [NT] Removed the notes that some options disable loading of a
      profile.  Lintian now always loads a profile when doing checks.

  * private/refresh-archs:
    + [NT] Rewritten.
  * private/refresh-hwcap:
    + [JW] New file.

  * reporting/harness:
    + [NT] Removed useless "TODO" message from the log output.
    + [NT] Added -h/--help option to print usage information.
    + [NT] Added --dry-run option.
    + [NT] A source package is now only processed if one (or more) of
      its binaries are processed as well.
    + [NT] Also symlink $LINTIAN_BIN_DIR/gpgv to /bin/true when
      skipping signature checks.  This avoids issues when some tools
      (such as dpkg-source) prefers gpgv to gpg.
  * reporting/html_reports:
    + [JW] Properly handle uploader names with commas.
    + [NT] Use the severities from profiles when generating tag pages.
      Based on patches from Evan Broder.  (Closes: #650712)
    + [NT] Removed tag loading code, which has moved into
      Lintian::Profile.
    + [NT] Pass a profile to the templates (as $profile) instead of the
      old %all hash.
    + [NT] List only source packages on the "packages_X.html" pages.
  * reporting/templates/tags-all.tmpl:
    + [NT] Use $profile instead of the %all hash.

 -- Niels Thykier <niels@thykier.net>  Tue, 29 Nov 2011 18:42:37 +0100

lintian (2.5.4) unstable; urgency=medium

  The "perl5.14 (+ misc) fix"-upload.  Medium as perl 5.14
  deprecation warnings tend to make Lintian output unreadable.

  * Summary of tag changes:
    + Added:
      - data.tar.xz-member-without-dpkg-pre-depends