@@ -1,1 +1,1 @@
-W: source-copyright-dep5-syntax-error source: syntax-error-in-dep5-copyright paragraph 2 after the field license:  This package is distributed in the hope that it will be useful, but WITHOUT
+W: source-copyright-dep5-syntax-error source: syntax-error-in-dep5-copyright syntax error at line 13: Continuation line outside a paragraph.
